--- a/charts/kubezero-logging/charts/eck-operator/Chart.yaml
+++ b/charts/kubezero-logging/charts/eck-operator/Chart.yaml
@@ -1,9 +1,10 @@
 apiVersion: v2
-appVersion: 2.4.0
-description: 'A Helm chart for deploying the Elastic Cloud on Kubernetes (ECK) operator: the official Kubernetes operator for orchestrating Elasticsearch, Kibana, APM Server, Enterprise Search, and Beats.'
+appVersion: 2.9.0
+description: Elastic Cloud on Kubernetes (ECK) operator
 home: https://github.com/elastic/cloud-on-k8s
 icon: https://helm.elastic.co/icons/eck.png
 keywords:
+  - Logstash
   - Elasticsearch
   - Kibana
   - APM Server
@@ -11,10 +12,10 @@ keywords:
   - Enterprise Search
   - Elastic Stack
   - Operator
-kubeVersion: '>=1.12.0-0'
+kubeVersion: '>=1.21.0-0'
 maintainers:
   - email: eck@elastic.co
     name: Elastic
 name: eck-operator
 type: application
-version: 2.4.0
+version: 2.9.0
