--- a/charts/kubezero-logging/charts/eck-operator/templates/configmap.yaml
+++ b/charts/kubezero-logging/charts/eck-operator/templates/configmap.yaml
@@ -11,21 +11,33 @@ data:
     log-verbosity: {{ int .Values.config.logVerbosity }}
     metrics-port: {{ int .Values.config.metricsPort }}
     container-registry: {{ .Values.config.containerRegistry }}
+    {{- with .Values.config.containerSuffix }}
+    container-suffix: {{ . }}
+    {{- end }}
+    {{- with .Values.config.containerRepository }}
+    container-repository: {{ . }}
+    {{- end }}
     max-concurrent-reconciles: {{ int .Values.config.maxConcurrentReconciles }}
+    {{- with .Values.config.passwordHashCacheSize }}
+    password-hash-cache-size: {{ int . }}
+    {{- end }}
     ca-cert-validity: {{ .Values.config.caValidity }}
     ca-cert-rotate-before: {{ .Values.config.caRotateBefore }}
     cert-validity: {{ .Values.config.certificatesValidity }}
     cert-rotate-before: {{ .Values.config.certificatesRotateBefore }}
-    {{- if .Values.config.exposedNodeLabels }}
-    exposed-node-labels: [{{ join "," .Values.config.exposedNodeLabels  }}]
+    {{- with .Values.config.exposedNodeLabels }}
+    exposed-node-labels: [{{ join "," .  }}]
     {{- end }}
     set-default-security-context: {{ .Values.config.setDefaultSecurityContext }}
     kube-client-timeout: {{ .Values.config.kubeClientTimeout }}
+    {{- with .Values.config.kubeClientQPS }}
+    kube-client-qps: {{ int . }}
+    {{- end }}
     elasticsearch-client-timeout: {{ .Values.config.elasticsearchClientTimeout }}
     disable-telemetry: {{ .Values.telemetry.disabled }}
     distribution-channel: {{ .Values.telemetry.distributionChannel }}
-    {{- if .Values.telemetry.interval }}
-    telemetry-interval: {{ .Values.telemetry.interval }}
+    {{- with .Values.telemetry.interval }}
+    telemetry-interval: {{ . }}
     {{- end }}
     validate-storage-class: {{ .Values.config.validateStorageClass }}
     {{- if .Values.tracing.enabled }}
@@ -41,8 +53,10 @@ data:
     manage-webhook-certs: false
     webhook-cert-dir: {{ .Values.webhook.certsDir }}
       {{- end }}
+    webhook-port: {{ .Values.webhook.port }}
     {{- end }}
-    {{- if .Values.managedNamespaces }}
-    namespaces: [{{ join "," .Values.managedNamespaces  }}]
+    {{- with .Values.managedNamespaces }}
+    namespaces: [{{ join "," . }}]
     {{- end }}
     enable-leader-election: {{ .Values.config.enableLeaderElection }}
+    elasticsearch-observation-interval: {{ .Values.config.elasticsearchObservationInterval }}
