--- a/charts/kubezero-logging/charts/fluent-bit/templates/clusterrole.yaml
+++ b/charts/kubezero-logging/charts/fluent-bit/templates/clusterrole.yaml
@@ -15,6 +15,9 @@ rules:
       - nodes
       - nodes/proxy
       {{- end }}
+      {{- if .Values.rbac.eventsAccess }}
+      - events
+      {{- end }}
     verbs:
       - get
       - list
@@ -29,13 +32,13 @@ rules:
     verbs:
       - use
   {{- end }}
-  {{- if and .Values.openShift.enabled .Values.openShift.securityContextConstraints.create }}
+  {{- if .Values.openShift.enabled }}
   - apiGroups:
       - security.openshift.io
     resources:
       - securitycontextconstraints
     resourceNames:
-      - {{ include "fluent-bit.fullname" . }}
+      - {{ include "fluent-bit.openShiftSccName" . }}
     verbs:
       - use
   {{- end }}
