--- a/charts/kubezero-logging/charts/fluent-bit/templates/configmap-dashboards.yaml
+++ b/charts/kubezero-logging/charts/fluent-bit/templates/configmap-dashboards.yaml
@@ -5,18 +5,16 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "fluent-bit.fullname" $ }}-dashboard-{{ trimSuffix ".json" (base $path) }}
-  {{- with $.Values.dashboards.namespace }}
-  namespace: {{ . }}
-  {{- end }}
+  namespace: {{ default $.Release.Namespace $.Values.dashboards.namespace }}
   {{- with $.Values.dashboards.annotations }}
   annotations:
     {{- toYaml . | nindent 4 -}}
   {{- end }}
   labels:
     {{- include "fluent-bit.labels" $ | nindent 4 }}
-    {{ $.Values.dashboards.labelKey }}: "1"
+    {{ $.Values.dashboards.labelKey }}: {{ $.Values.dashboards.labelValue | quote }}
 data:
-  {{ base $path }}: |
+  {{ include "fluent-bit.fullname" $ }}-{{ base $path }}: |
     {{- tpl ($.Files.Get $path) $ | nindent 4 }}
 ---
 {{- end }}
