--- a/charts/kubezero-logging/charts/fluent-bit/templates/hpa.yaml
+++ b/charts/kubezero-logging/charts/fluent-bit/templates/hpa.yaml
@@ -1,8 +1,9 @@
 {{- if and  ( eq  .Values.kind "Deployment" )  .Values.autoscaling.enabled  }}
-apiVersion: autoscaling/v2beta2
+apiVersion: {{ include "fluent-bit.hpa.apiVersion" . }}
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "fluent-bit.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "fluent-bit.labels" . | nindent 4 }}
 spec:
