--- a/charts/kubezero-network/values.yaml
+++ b/charts/kubezero-network/values.yaml
@@ -16,7 +16,9 @@ metallb:
 
 multus:
   enabled: false
-  tag: "v3.9.3"
+  image:
+    repository: ghcr.io/k8snetworkplumbingwg/multus-cni
+    tag: v3.9.3
 
   clusterNetwork: "cilium"
   defaultNetworks: []
