--- a/charts/kubezero-metrics/templates/istio-service.yaml
+++ b/charts/kubezero-metrics/templates/istio-service.yaml
@@ -17,6 +17,8 @@ spec:
   - route:
     - destination:
         host: {{ $service.destination }}
+        port:
+          number: {{ $service.port }}
 ---
 {{- end }}
 
