--- a/charts/kubezero-auth/templates/keycloak/istio-service.yaml
+++ b/charts/kubezero-auth/templates/keycloak/istio-service.yaml
@@ -14,5 +14,5 @@ spec:
   http:
   - route:
     - destination:
-        host: {{ template "kubezero-lib.fullname" $ }}-service
+        host: {{ template "kubezero-lib.fullname" $ }}-keycloak
 {{- end }}
