--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -105,7 +105,7 @@ kube-prometheus-stack:
 
       resources:
         requests:
-          memory: 512Mi
+          memory: 2Gi
           cpu: 500m
         limits:
           memory: 4Gi
