--- a/charts/kubezero-auth/Chart.yaml
+++ b/charts/kubezero-auth/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: kubezero-auth
 description: KubeZero umbrella chart for all things Authentication and Identity management
 type: application
-version: 0.3.5
-appVersion: 21.1.1
+version: 0.4.0
+appVersion: 22.0.1
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -16,8 +16,8 @@ dependencies:
   - name: kubezero-lib
     version: ">= 0.1.6"
     repository: https://cdn.zero-downtime.net/charts/
-  - name: postgresql
-    version: 11.8.1
-    repository: https://charts.bitnami.com/bitnami
-    condition: postgresql.enabled
-kubeVersion: ">= 1.25.0"
+  - name: keycloak
+    version: 16.1.2
+    repository: "oci://registry-1.docker.io/bitnamicharts"
+    condition: keycloak.enabled
+kubeVersion: ">= 1.26.0"
