--- a/charts/kubezero-auth/templates/keycloak/istio-authorization-policy.yaml
+++ b/charts/kubezero-auth/templates/keycloak/istio-authorization-policy.yaml
@@ -2,7 +2,7 @@
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
-  name: {{ .Release.Name }}-deny-metrics-ipblocks
+  name: {{ .Release.Name }}-keycloak-deny-not-in-ipblocks
   namespace: istio-system
   labels:
     {{- include "kubezero-lib.labels" $ | nindent 4 }}
@@ -12,6 +12,7 @@ spec:
       app: istio-ingressgateway
   action: DENY
   rules:
+  # block access to metrics via Ingress
   - to:
     - operation:
         hosts: ["{{ .Values.keycloak.istio.url }}"]
