--- a/charts/kubezero-addons/templates/forseti/deployment.yaml
+++ b/charts/kubezero-addons/templates/forseti/deployment.yaml
@@ -71,6 +71,7 @@ spec:
       tolerations:
       - key: node-role.kubernetes.io/control-plane
         effect: NoSchedule
+      priorityClassName: system-cluster-critical
       volumes:
       - name: aws-token
         projected:
