--- a/charts/kubezero-ci/templates/gitea/istio-service.yaml
+++ b/charts/kubezero-ci/templates/gitea/istio-service.yaml
@@ -12,6 +12,15 @@ spec:
   hosts:
   - {{ .Values.gitea.istio.url }}
   http:
+  {{- if .Values.gitea.istio.authProvider }}
+  # https://github.com/go-gitea/gitea/issues/13606
+  - match:
+    - uri:
+        regex: ^/user/login.*
+    redirect:
+      uri: /user/oauth2/{{ .Values.gitea.istio.authProvider }}
+      redirectCode: 302
+  {{- end }}
   - route:
     - destination:
         host: gitea-http
