--- a/charts/kubezero-addons/templates/cluster-backup/cronjob.yaml
+++ b/charts/kubezero-addons/templates/cluster-backup/cronjob.yaml
@@ -54,6 +54,7 @@ spec:
             emptyDir: {}
           nodeSelector:
             node-role.kubernetes.io/control-plane: ""
+          priorityClassName: system-cluster-critical
           tolerations:
           - key: node-role.kubernetes.io/control-plane
             effect: NoSchedule
