--- a/charts/kubezero-istio-gateway/values.yaml
+++ b/charts/kubezero-istio-gateway/values.yaml
@@ -7,6 +7,9 @@ gateway:
 
   replicaCount: 1
 
+  terminationGracePeriodSeconds: 120
+  priorityClassName: system-cluster-critical
+
   resources:
     requests:
       cpu: 50m
