--- a/charts/kubezero-network/templates/multus/daemonset.yaml
+++ b/charts/kubezero-network/templates/multus/daemonset.yaml
@@ -37,10 +37,10 @@ spec:
         resources:
           requests:
             cpu: "100m"
-            memory: "50Mi"
+            memory: "32Mi"
           limits:
-            cpu: "100m"
-            memory: "50Mi"
+            #cpu: "100m"
+            memory: "64Mi"
         securityContext:
           privileged: true
           capabilities:
