--- a/charts/kubezero-istio-gateway/templates/envoyfilter-hardening.yaml
+++ b/charts/kubezero-istio-gateway/templates/envoyfilter-hardening.yaml
@@ -28,11 +28,16 @@ spec:
         name: "envoy.filters.network.http_connection_manager"
         typed_config:
           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
+          stat_prefix: ingress_http
+          use_remote_address: true
+          normalize_path: true
+          merge_slashes: true
+          path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
           common_http_protocol_options:
             idle_timeout: 3600s # 1 hour
             # headers_with_underscores_action: REJECT_REQUEST
           http2_protocol_options:
-            max_concurrent_streams: 500
+            max_concurrent_streams: 100
             initial_stream_window_size: 65536 # 64 KiB
             initial_connection_window_size: 1048576 # 1 MiB
           #stream_idle_timeout: 300s # 5 mins, must be disabled for long-lived and streaming requests
