--- a/charts/kubezero-addons/values.yaml
+++ b/charts/kubezero-addons/values.yaml
@@ -54,7 +54,7 @@ aws-eks-asg-rolling-update-handler:
   enabled: false
   image:
     repository: twinproduction/aws-eks-asg-rolling-update-handler
-    tag: v1.8.1
+    tag: v1.8.2
 
   environmentVars:
     - name: CLUSTER_NAME
@@ -76,6 +76,18 @@ aws-eks-asg-rolling-update-handler:
       value: "/var/run/secrets/sts.amazonaws.com/serviceaccount/token"
     - name: AWS_STS_REGIONAL_ENDPOINTS
       value: "regional"
+
+  securityContext:
+    runAsNonRoot: true
+    runAsUser: 1001
+    seccompProfile:
+      type: RuntimeDefault
+
+  containerSecurityContext:
+    allowPrivilegeEscalation: false
+    capabilities:
+     drop:
+       - ALL
 
   resources:
     requests:
@@ -189,7 +201,7 @@ cluster-autoscaler:
 
   image:
     repository: registry.k8s.io/autoscaling/cluster-autoscaler
-    tag: v1.26.4
+    tag: v1.27.3
 
   autoDiscovery:
     clusterName: ""
@@ -259,72 +271,3 @@ external-dns:
   #- istio-gateway
 
   provider: inmemory
-
-falco-control-plane:
-  enabled: false
-
-  fullnameOverride: falco-control-plane
-
-  # -- Disable the drivers since we want to deploy only the k8saudit plugin.
-  driver:
-    enabled: false
-
-  # -- Disable the collectors, no syscall events to enrich with metadata.
-  collectors:
-    enabled: false
-
-  nodeSelector:
-    node-role.kubernetes.io/control-plane: ""
-
-  # -- Deploy Falco as a deployment. One instance of Falco is enough. Anyway the number of replicas is configurabale.
-  controller:
-    kind: deployment
-    deployment:
-      # -- Number of replicas when installing Falco using a deployment. Change it if you really know what you are doing.
-      # For more info check the section on Plugins in the README.md file.
-      replicas: 1
-
-
-  falcoctl:
-    artifact:
-      install:
-        # -- Enable the init container. We do not recommend installing (or following) plugins for security reasons since they are executable objects.
-        enabled: true
-      follow:
-        # -- Enable the sidecar container. We do not support it yet for plugins. It is used only for rules feed such as k8saudit-rules rules.
-        enabled: true
-    config:
-      artifact:
-        install:
-          # -- Do not resolve the depenencies for artifacts. By default is true, but for our use case we disable it.
-          resolveDeps: false
-          # -- List of artifacts to be installed by the falcoctl init container.
-          # Only rulesfiles, we do no recommend plugins for security reasonts since they are executable objects.
-          refs: [k8saudit-rules:0.6]
-        follow:
-          # -- List of artifacts to be followed by the falcoctl sidecar container.
-          # Only rulesfiles, we do no recommend plugins for security reasonts since they are executable objects.
-          refs: [k8saudit-rules:0.6]
-
-  services:
-    - name: k8saudit-webhook
-      ports:
-        - port: 9765 # See plugin open_params
-          protocol: TCP
-
-  falco:
-    rules_file:
-      - /etc/falco/k8s_audit_rules.yaml
-      - /etc/falco/rules.d
-    plugins:
-      - name: k8saudit
-        library_path: libk8saudit.so
-        init_config:
-          maxEventBytes: 1048576
-          # sslCertificate: /etc/falco/falco.pem
-        open_params: "http://:9765/k8s-audit"
-      - name: json
-        library_path: libjson.so
-        init_config: ""
-    # Plugins that Falco will load. Note: the same plugins are installed by the falcoctl-artifact-install init container.
-    load_plugins: [k8saudit, json]
