--- a/charts/kubezero-falco/Chart.yaml
+++ b/charts/kubezero-falco/Chart.yaml
@@ -1,18 +1,23 @@
 apiVersion: v2
-name: kubezero
-description: KubeZero - Root App of Apps chart
+name: kubezero-falco
+description: Falco Container Security and Audit components
 type: application
-version: 1.27.8
+version: 0.1.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
-  - argocd
+  - falco
 maintainers:
   - name: Stefan Reimer
     email: stefan@zero-downtime.net
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.6"
-    repository: https://cdn.zero-downtime.net/charts
+    repository: https://cdn.zero-downtime.net/charts/
+  - name: falco
+    version: 3.8.4
+    repository: https://falcosecurity.github.io/charts
+    condition: k8saudit.enabled
+    alias: k8saudit
 kubeVersion: ">= 1.26.0"
