--- a/charts/kubezero-operators/Chart.yaml
+++ b/charts/kubezero-operators/Chart.yaml
@@ -20,4 +20,8 @@ dependencies:
     version: 2.4.0
     repository: https://opster.github.io/opensearch-k8s-operator/
     condition: opensearch-operator.enabled
+  - name: eck-operator
+    version: 2.9.0
+    repository: https://helm.elastic.co
+    condition: eck-operator.enabled
 kubeVersion: ">= 1.26.0"
