--- a/charts/kubezero-operators/values.yaml
+++ b/charts/kubezero-operators/values.yaml
@@ -13,3 +13,12 @@ opensearch-operator:
     effect: NoSchedule
   nodeSelector:
     node-role.kubernetes.io/control-plane: ""
+
+eck-operator:
+  enabled: false
+  installCRDs: false
+  tolerations:
+  - key: node-role.kubernetes.io/control-plane
+    effect: NoSchedule
+  nodeSelector:
+    node-role.kubernetes.io/control-plane: ""
