--- a/charts/kubezero/templates/operators.yaml
+++ b/charts/kubezero/templates/operators.yaml
@@ -5,6 +5,11 @@ opensearch-operator:
   {{- toYaml . | nindent 2 }}
 {{- end }}
 
+{{- with index .Values "operators" "eck-operator" }}
+eck-operator:
+  {{- toYaml . | nindent 2 }}
+{{- end }}
+
 {{- end }}
 
 
