--- a/charts/kubezero-istio-gateway/templates/envoyfilter-hardening.yaml
+++ b/charts/kubezero-istio-gateway/templates/envoyfilter-hardening.yaml
@@ -35,7 +35,7 @@ spec:
           path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
           common_http_protocol_options:
             idle_timeout: 3600s # 1 hour
-            # headers_with_underscores_action: REJECT_REQUEST
+            headers_with_underscores_action: REJECT_REQUEST
           http2_protocol_options:
             max_concurrent_streams: 100
             initial_stream_window_size: 65536 # 64 KiB
