--- a/charts/kubezero-storage/charts/aws-efs-csi-driver/values.yaml
+++ b/charts/kubezero-storage/charts/aws-efs-csi-driver/values.yaml
@@ -11,7 +11,7 @@ useFIPS: false
 
 image:
   repository: amazon/aws-efs-csi-driver
-  tag: "v1.6.0"
+  tag: "v1.7.1"
   pullPolicy: IfNotPresent
 
 sidecars:
@@ -77,7 +77,9 @@ controller:
     #   memory: 128Mi
   nodeSelector: {}
   updateStrategy: {}
-  tolerations: []
+  tolerations:
+    - key: CriticalAddonsOnly
+      operator: Exists
   affinity: {}
   # Specifies whether a service account should be created
   serviceAccount:
